#4360 - Clean up code
- Use AnnotationPredicates instead of locally implementing them